package edu.hitsz.bullet;

/**
 * @Author hitsz
 */
public class GoldBullet extends BaseBullet {

    public GoldBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
