package edu.hitsz.bullet;

/**
 * @Author hitsz
 */
public class HeroDartsBullet extends BaseBullet {

    public HeroDartsBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
