package edu.hitsz.bullet;

/**
 * @Author hitsz
 */
public class HeroGreenBullet extends BaseBullet {

    public HeroGreenBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
