package edu.hitsz.item;

public interface BombObserver {

    void updateOnBombExplosion();
}
